# Company_Twin_Agent

./: .gitattributes  .gitignore  README.md  calibration.jsonl  calibration_batch_20260706.json  calibration_batch_era5_20260706.json  calibration_batch_era6_20260706.json  calibration_batch_final_20260706.json  calibration_batch_v4_20260706.json  pyproject.toml  r10_controls_batch.json  r12_controls_batch.json
docs/: g3_calibration.md  g3_negative_calibration_result.json  g3_negative_calibration_result_v3_20260708.json  g3_negative_calibration_samples.jsonl
scripts/: phase3_d1_analysis.py  phase3_d1_replay_analysis.py  phase3_d1b_analysis.py
tests/: conftest.py  test_acceptance.py  test_action_replay.py  test_backcasting_run.py  test_branch_execution.py  test_campaign_compliance.py  test_corpus.py  test_customer_glitch_guard.py  test_design_loader.py  test_diegetic_record_quality.py  test_e2_motives.py  test_feasibility_gate_v2.py  test_gap_pr2.py  test_kernel_and_triage.py  test_live_failure_recording.py  test_loss_campaign.py  test_loss_monitoring.py  test_loss_oracle.py  test_m3_pilot_result.py  test_m3_repilot2_plan.py  test_m3_repilot2_result.py  test_m3_repilot3_plan.py  test_m3_repilot3_result.py  test_m3_repilot4_plan.py  test_m3_repilot4_result.py  test_m3_repilot_plan.py  test_m3_repilot_result.py  test_m3_stall2_analysis.py  test_m3_stall3_analysis.py  test_m3_stall4_analysis.py  test_m3_stall_analysis.py  test_notice_circulation.py  test_option_enumeration.py  test_p11_dilemma_probe.py  test_parallel_runner.py  test_phase3_consequences.py  (+17 more)
(+205 files in other folders)
