[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "company-twin"
version = "0.1.0"
description = "Control-environment digital twin harness for DFH sales process documents"
requires-python = ">=3.11"
dependencies = [
  "deepagents>=0.6.3",
  "duckdb>=1.1",
  "langchain-openrouter>=0.2.0",
  "langchain>=1.0",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "pyarrow>=15",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "typer>=0.12",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
company-twin = "company_twin.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
